--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 ofxMySQL, copyright Kimchi and Chips 2011
-Quick and easy access to MySQL
+Quick and (sl)eazy access to MySQL
 
-NOTE: All your projects that use MySQL will be subject to the GPL license, unless you cough them up some cash.
+NOTE: All your projects that use MySQL will be subject to the GPL license, unless you cough up Oracle up some cash.
 Check the MySQL license page for more details!
