--- a/README
+++ b/README
@@ -3,3 +3,6 @@ Quick and (sl)eazy access to MySQL
 
 NOTE: All your projects that use MySQL will be subject to the GPL license, unless you cough up Oracle up some cash.
 Check the MySQL license page for more details!
+
+Notes for usage at:
+http://forum.openframeworks.cc/index.php?topic=7168.0
